<resources>
    <string name="app_name">Tournament Tracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_all_tournaments">All Tournaments</string>

    <string name="menu_view_tournament">View Tournament</string>

    <string name="menu_new_tournament">New Tournament</string>
    <string name="new_tournament_num_players_hint">Number of Players</string>
    <string name="new_tournament_start">Start Tournament</string>
</resources>