<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.usefulapps.tournamenttracker.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.usefulapps.tournamenttracker.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.usefulapps.tournamenttracker.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_viewtournament"
        android:name="com.usefulapps.tournamenttracker.ui.viewtournament.ViewTournamentFragment"
        android:label="@string/menu_view_tournament">
        <argument
            android:name="tournamentId"
            app:argType="integer"
            />
    </fragment>

    <fragment
        android:id="@+id/nav_alltournaments"
        android:name="com.usefulapps.tournamenttracker.ui.alltournaments.AllTournamentsFragment"
        android:label="@string/menu_all_tournaments">
        <action
            android:id="@+id/action_alltournments_to_viewtournament"
            app:destination="@id/nav_viewtournament" />
    </fragment>

    <fragment
        android:id="@+id/nav_newtournament"
        android:name="com.usefulapps.tournamenttracker.ui.newtournament.NewTournamentFragment"
        android:label="@string/menu_new_tournament" />
</navigation>